# SageStreaming

./: .gitmodules  CMakeLists.txt  README.md  README.txt  UltimateMod.cpp  UltimateMod.vcxproj  UltimateMod.vcxproj.filters  UsefullLinks.md
Debug/: UltimateMod.exe.recipe  (+3 more)
SWGUI/: CMakeLists.txt  MainWindow.cpp  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui
SWGeneral/: .CMakeLists.txt.swp  CMakeLists.txt  UltimateMod.cpp  UltimateMod.sln  UltimateMod.vcxproj
SWGeneral/Tasks/AdventOfCode/: AdventOfCode.cpp  AdventOfCode.h  D1ReportRepair.cpp  D1ReportRepair.h  D2PasswordPhilosophy.cpp  D2PasswordPhilosophy.h  D3TobogganTrajectory.cpp  D3TobogganTrajectory.h  D4PassportProcessing.cpp  D4PassportProcessing.h  D5BinaryBoarding.cpp  D5BinaryBoarding.h  D6CustomCustoms.cpp  D6CustomCustoms.h  D7HandyHaversacks.cpp  D7HandyHaversacks.h  FileHandler.h
SWGeneral/Tasks/LeetCode/: 1299. Replace Elements with Greatest Element on Right Side.cpp  1346. Check If N and Its Double Exist.cpp  1409. Queries on a Permutation With Key.cpp  1476. Subrectangle Queries.cpp  169. Majority Element.cpp  1791. Find Center of Star Graph.cpp  226. Invert Binary Tree.cpp  237. Delete Node in a Linked List.cpp  26. Remove Duplicates from Sorted Array.cpp  283. Move Zeroes.cpp  414. Third Maximum Number.cpp  617. Merge Two Binary Trees.cpp  977. Squares of a Sorted Array.cpp  AddTwoNumbers.cpp  LeetCode.cpp  LeetCode.h  RemoveDuplicates.cpp  RemoveDuplicates.h  RemoveElement.cpp  TwoSum.cpp  XorOperatorInAnArray.cpp
SWGeneral/substance/: UMSubstance.cpp  UMSubstance.h
SWGraphics/: CMakeLists.txt
SWGraphics/Plotting/: DrawGraph.cpp  DrawGraph.h
SWGraphics/image/: PicturePainter.cpp  PicturePainter.h
SWGraphics/plotting/: DrawGraph.h
SWGraphics/texture/: Texture.cpp  Texture.h
SWGraphics/utils/: GLDefinitions.h
SWGraphics/window/: WindowPainterBase.cpp  WindowPainterBase.h  WindowPainterGlut.cpp  WindowPainterGlut.h
SWLib/: CMakeLists.txt
SWLib/Utils/: Log.cpp  Log.h
SWLib/callbacks/: CallbackDefintion.h  CallbackList.h  CallbackOwner.h  Signal.h  Slot.h  SlotBase.h  SlotList.h  SlotOwned.h  SlotOwnedBase.h  SlotOwnerBase.h
SWLib/data/: Data.h
SWLib/definitions/: LocalDefinitions.cpp  LocalDefinitions.h
SWLib/structures/queue/: CircleQueue.h  Queue.h
SWLib/utils/: Log.h  Size.h
SWMachineLearning/: CMakeLists.txt
SWMachineLearning/ML/: LinearRegression.cpp  LinearRegression.h
SWMachineLearning/YOLO/: DataSetMaker.py
SWTest/: CMakeLists.txt  README.md
SWTest/General/: Features.cpp
SWTest/Patterns/: Patterns.cpp  Patterns.h
SWTest/Threads/: Thread.cpp  Thread.h
SWTest/test_camera/: CMakeLists.txt
SWVideo/: CMakeLists.txt  VideoProcessing.cpp  VideoProcessing.h
SWVideo/cameras/: CamerasCreator.cpp  CamerasCreator.h  CamerasHandler.cpp  CamerasHandler.h
SWVideo/decoder/: Decoder.cpp  Decoder.h
SWVideo/decoder/ffmpeg/: FFmpegDecoder.h
SWVideo/encoder/: Encoder.h
SWVideo/ffmpeg/: CameraFFmpeg.cpp  CameraFFmpeg.h  FFmpegUtils.cpp  FFmpegUtils.h
SWVideo/image/: Image.h  ImageQueue.h
SageCore/: CMakeLists.txt  main.cpp
SageCore/config/: config_params.h
SageCore/core/: core.cpp  core.h
SageCore/substance/: substance.cpp  substance.h  substance_config.cpp  substance_config.h
SageGraphics/: CMakeLists.txt
SageGraphics/image/: PicturePainter.cpp  PicturePainter.h  picture_painter.cpp  picture_painter.h
SageGraphics/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
SageGraphics/layer/: IconsFontAwesome4.h  imgui_console.h  imgui_defintions.h  imgui_layer.cpp  imgui_layer.h  imgui_main_handler.cpp  imgui_main_handler.h  imgui_main_window.cpp  imgui_main_window.h  imgui_overlay_layer.h
SageGraphics/layer/node/: imgui_blueprint_definition.h  imgui_node_spawner.h  imgui_texture.h  imgui_video_node.h  imgui_video_node_editor.cpp  imgui_video_node_editor.h
SageGraphics/layer/utils/: imgui_utils.h
SageGraphics/plotting/: draw_graph.cpp  draw_graph.h
SageGraphics/texture/: Texture.cpp  Texture.h  imgui_texture_renderer.cpp  imgui_texture_renderer.h  texture.cpp  texture.h
SageGraphics/utils/: GLDefinitions.h  gl_definitions.h  gl_header.h
SageGraphics/window/: WindowPainterBase.cpp  WindowPainterBase.h  WindowPainterGlut.cpp  WindowPainterGlut.h  window_painter_base.cpp  window_painter_base.h  window_painter_glfw.cpp  window_painter_glfw.h  window_painter_glut.cpp  window_painter_glut.h
SageLib/: CMakeLists.txt
SageLib/callbacks/: CallbackList.h  CallbackOwner.h  Slot.h  callback.h  callback_handler.h  callback_list.h  callback_owner.h  signal.h  slot.h
SageLib/config/: cfg_fields.h  ini_parser.cpp  ini_parser.h
SageLib/data/: data.h
SageLib/definitions/: local_definitions.cpp  local_definitions.h  sage_definitions.h
SageLib/net/: address.h
SageLib/net/socket/: socket.h  unix_socket.cpp  unix_socket.h
SageLib/structures/queue/: CircleQueue.h  Queue.h  circle_queue.h  queue.h  static_queue.h
SageLib/utils/: Size.h  elapsed_timer.h  log.h  size.h
SageML/: CMakeLists.txt
SageML/ML/: LinearRegression.h
SageML/ml/: linear_regression.cpp
SageTest/: CMakeLists.txt
SageTest/General/: Features.h
SageTest/general/: features.cpp
SageTest/test_camera/: CMakeLists.txt  ffmpeg_test.cpp
SageTest/test_structure/: CMakeLists.txt  static_queue_test.cpp
SageVideo/: CMakeLists.txt
SageVideo/cameras/: cameras_creator.cpp  cameras_creator.h  cameras_handler.cpp  cameras_handler.h
SageVideo/decoder/: decoder.cpp  decoder.h
SageVideo/encoder/: Encoder.cpp  encoder.cpp  encoder.h
SageVideo/ffmpeg/: CameraFFmpeg.cpp  FFmpegUtils.cpp  camera_ffmpeg.cpp  camera_ffmpeg.h  ffmpeg_utils.cpp  ffmpeg_utils.h
SageVideo/gstreamer/: camera_gstreamer.cpp  camera_gstreamer.h  gstreamer_capture.cpp  gstreamer_capture.h  gstreamer_capture_data.h  gstreamer_capture_prop.h  gstreamer_definitions.h  gstreamer_initializer.cpp  gstreamer_initializer.h  gstreamer_safe_ptr.h
SageVideo/image/: Image.h  image.h  image_queue.h
SageVideo/opencv/: camera_opencv.cpp  camera_opencv.h
(+118 files in other folders)
